Fix the list options